# igmapper

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
doc/: DOCUMENTATION.md  HOT_TO.md
igmapper/: __init__.py  client.py  models.py  session.py
tests/: _vars.py  test_feed.py  test_profile.py
