[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igmapper"
version = "1.0.6"
description = "Unofficial Instagram API to request available data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "lucasoal" }
]

keywords = [
   "igmapper", "instagram", "unofficial-api",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries"
]

dependencies = [
  "requests", "pydantic",
]

[project.urls]
Homepage = "https://pypi.org/project/igmapper"
Documentation = "https://github.com/lucasoal/igmapper/blob/main/doc/DOCUMENTATION.md"
Repository = 'https://github.com/lucasoal/igmapper'

[tool.setuptools.packages.find]
where = ["."]
include = ["igmapper*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
